--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+.DS_Store
 .idea/*
-node_modules/*
-src/docker/log/
-src/docker/log/*
-src/docker/log/mysql/
-src/docker/log/mysql/*
-src/docker/log/
+webapp/node/app/node_modules/*
+db/log/
+db/log/*
+db/log/mysql/
+db/log/mysql/*
