--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -7,9 +7,16 @@ services:
     volumes:
       - "./mysql/initdb:/docker-entrypoint-initdb.d"
       - "./log/mysql:/var/log/mysql"
-    image: stylist_navi_mysql
+    image: stylist_navi_db
     environment:
       MYSQL_ROOT_PASSWORD: "password"
       MYSQL_USER: "mysqladmin"
       MYSQL_PASSWORD: "password"
       TZ: "Asia/Tokyo"
+  webserver:
+    build: "./node"
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./node/app:/app
+    image: stylist_navi_webapp
