--- a/webapp/node/app/package.json
+++ b/webapp/node/app/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run build:live",
     "build": "tsc",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts"
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/node": "^16.11.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.9.0"
   }
 }
