--- a/webapp/node/app/package.json
+++ b/webapp/node/app/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build:live",
+    "start": "NODE_ENV=local && npm run build:live",
+    "start:dev": "NODE_ENV=development && npm run build:live",
+    "start:prd": "NODE_ENV=production && npm run build:live",
     "build": "tsc",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./src/app.ts"
   },
@@ -14,13 +16,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7",
+    "@types/validator": "^13.6.6",
     "prettier": "^2.4.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@types/node": "^16.11.6",
     "express": "^4.17.1",
-    "sequelize": "^6.9.0"
+    "mysql2": "^2.3.3-rc.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.9.0",
+    "sequelize-cli": "^6.3.0",
+    "sequelize-typescript": "^2.1.1"
   }
 }
