--- a/webapp/node/app/tsconfig.json
+++ b/webapp/node/app/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2021",
     "module": "commonjs",
     "types": ["node"],
     "sourceMap": true,
@@ -10,5 +10,7 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "tsconfig.json"]
+  "exclude": ["node_modules", "tsconfig.json"],
+  "experimentalDecorators": true,
+  "emitDecoratorMetadata": true
 }
