--- a/src/docker/node/docker-compose.yml
+++ b/src/docker/node/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3"
 services:
   webserver:
-    build: "./node"
+    build:
+      context: ../../
+      dockerfile: ./docker/node/Dockerfile
     tty: true
     ports:
       - "3000:3000"
     volumes:
-      - ./node/app:/app
+      - ./app:/app
     image: stylist_navi_webapp
