--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 .idea/*
-webapp/node/app/node_modules/*
-db/log/
-db/log/*
-db/log/mysql/
-db/log/mysql/*
+src/app/node_modules/*
+src/docker/mysql/log/
+src/docker/mysql/log/*
+src/docker/mysql/log/mysql/
+src/docker/mysql/log/mysql/*
