--- a/src/app/package.json
+++ b/src/app/package.json
@@ -9,7 +9,7 @@
     "start:dev": "NODE_ENV=development && npm run build:live",
     "start:prd": "NODE_ENV=production && npm run build:live",
     "build": "tsc",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./src/app.ts"
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' ./webapp/app.ts"
   },
   "keywords": [],
   "author": "",
