--- a/src/app/package.json
+++ b/src/app/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.7",
     "@types/validator": "^13.6.6",
